# Crabomination

./: .gitattributes  .gitignore  CUBE_FEATURES.md  Cargo.toml  DECK_FEATURES.md  FEATURE_ROADMAP.md  README.md  STRIXHAVEN2.md  TODO.md  _cast_helper.py  _def_default.py
crabomination/: Cargo.toml  MagicCompRules_20260417.txt
crabomination/src/: card.rs  card_registry.rs  cube.rs  decision.rs  decklist.rs  demo.rs  draft.rs  effect.rs  format.rs  game.rs  lib.rs  mana.rs  net.rs  player.rs  replacement.rs  snapshot.rs  sos_mode.rs  static_str_serde.rs  team.rs
crabomination/src/catalog/: mod.rs
crabomination/src/catalog/sets/: ap.rs  dis.rs  gpt.rs  inv.rs  lea.rs  mod.rs  ogw.rs  pc2.rs  por.rs  rav.rs  rtr.rs  staples.rs  ths.rs  xtra.rs  zen.rs
crabomination/src/catalog/sets/all/: instants.rs
crabomination/src/catalog/sets/ap/: creatures.rs  mod.rs
crabomination/src/catalog/sets/arn/: creatures.rs  mod.rs
crabomination/src/catalog/sets/decks/: lands.rs  (+4 more)
crabomination/src/game/: actions.rs  affordances.rs  combat.rs  effects.rs  layers.rs  mod.rs  stack.rs  types.rs
crabomination/src/game/effects/: delayed.rs  eval.rs  events.rs  mod.rs  movement.rs  targeting.rs  tokens.rs
crabomination/src/server/: bot.rs  lobby.rs  mod.rs  tcp.rs  view.rs
crabomination/src/tests/: akh.rs  card.rs  classic.rs  combat_keywords.rs  counters.rs  cr_rules.rs  energy.rs  format.rs  game.rs  jewel.rs  ktk.rs  mana.rs  mkm.rs  modern.rs  multiplayer.rs  ogw.rs  sos.rs  stx.rs  thb.rs  xtra.rs
crabomination/src/tests/stx/: mod.rs  part_00.rs  part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs  part_06.rs  part_07.rs  part_08.rs  part_09.rs  part_10.rs  part_11.rs  part_12.rs  part_13.rs  part_14.rs  part_15.rs  part_16.rs  part_17.rs  part_18.rs  part_19.rs  part_20.rs  part_21.rs  part_22.rs  part_23.rs  part_24.rs  part_25.rs  part_26.rs  part_27.rs  part_28.rs  part_29.rs  part_30.rs
crabomination/tests/: card_instance.rs
crabomination_catalog/: Cargo.toml
crabomination_catalog/src/: lib.rs
crabomination_catalog/src/sets/: all_factories.rs  chk.rs  lci.rs  mkm.rs  mod.rs  thb.rs  xtra.rs
crabomination_catalog/src/sets/akh/: mod.rs
crabomination_catalog/src/sets/all/: instants.rs  mod.rs
crabomination_catalog/src/sets/ap/: creatures.rs
crabomination_catalog/src/sets/arn/: creatures.rs
crabomination_catalog/src/sets/decks/: creatures.rs  lands.rs  mod.rs  modern.rs  spells.rs
crabomination_catalog/src/sets/dis/: creatures.rs  mod.rs
crabomination_catalog/src/sets/fem/: sorceries.rs
crabomination_catalog/src/sets/gpt/: creatures.rs
crabomination_catalog/src/sets/ice/: instants.rs
crabomination_catalog/src/sets/inv/: instants.rs
crabomination_catalog/src/sets/khm/: mod.rs
crabomination_catalog/src/sets/kld/: mod.rs
crabomination_catalog/src/sets/ktk/: mod.rs
crabomination_catalog/src/sets/lea/: artifacts.rs  creatures.rs  enchantments.rs  instants.rs  lands.rs  mod.rs  sorceries.rs
crabomination_catalog/src/sets/m11/: sorceries.rs
crabomination_catalog/src/sets/mod_set/: artifacts.rs  creatures.rs  enchantments.rs  instants.rs  lands.rs  mod.rs  sagas.rs  sorceries.rs  spells.rs
crabomination_catalog/src/sets/ogw/: creatures.rs  instants.rs  mod.rs
crabomination_catalog/src/sets/pc2/: creatures.rs
crabomination_catalog/src/sets/por/: instants.rs
crabomination_catalog/src/sets/rav/: creatures.rs  instants.rs
crabomination_catalog/src/sets/rtr/: creatures.rs
crabomination_catalog/src/sets/sos/: artifacts.rs  creatures.rs  enchantments.rs  instants.rs  lands.rs  mdfcs.rs  mod.rs  sorceries.rs
crabomination_catalog/src/sets/stx/: all_factories.rs  extras_00.rs  extras_01.rs  extras_02.rs  extras_03.rs  extras_04.rs  extras_05.rs  extras_06.rs  extras_07.rs  extras_08.rs  extras_09.rs  extras_10.rs  extras_11.rs  extras_12.rs  extras_13.rs  extras_14.rs  extras_15.rs  extras_16.rs  extras_17.rs  extras_19.rs  iconic.rs  legends.rs  lessons.rs  lorehold.rs  mod.rs  mono.rs  prismari.rs  quandrix.rs  shared.rs  silverquill.rs  witherbloom.rs
crabomination_catalog/src/sets/ths/: cards.rs  enchantments.rs  lands.rs  mod.rs
crabomination_catalog/src/sets/tmp/: mod.rs  sorceries.rs
crabomination_catalog/src/sets/zen/: creatures.rs  lands.rs
crabomination_client/: Cargo.toml
crabomination_client/assets/models/: woodtable_1.glb
crabomination_client/debug/: audited_cards.json
crabomination_client/src/: audit.rs  bot.rs  card.rs  config.rs  debug_export.rs  embedded_assets.rs  game.rs  main.rs  menu.rs  net_plugin.rs  render_quality.rs  scryfall.rs  synthesized_cards.rs  theme.rs
crabomination_client/src/card/: components.rs  hand.rs  layout.rs  mesh.rs  mipmap.rs  mod.rs  observers.rs  spawn.rs
crabomination_client/src/systems/: animate.rs  camera_zoom.rs  chat.rs  counter_coins.rs  counter_tooltip.rs  debug_console.rs  decision_ui.rs  draft.rs  export_prompt.rs  game_over.rs  game_ui.rs  gizmos.rs  impact.rs  input.rs  kb_cursor.rs  keyword_label.rs  legal_target_filter.rs  lobby_ui.rs  mod.rs  phase_bar.rs  pt_label.rs  quality.rs  settings_menu.rs  token_badge.rs  ui.rs  ui_card_hover.rs
crabomination_client/src/systems/game_ui/: buttons.rs  crest.rs  mod.rs  player_stats.rs  popups.rs
(+127 files in other folders)
