[package]
name = "crabomination"
version = "0.1.0"
edition = "2024"

[dependencies]
crabomination_base = { path = "../crabomination_base" }
crabomination_catalog = { path = "../crabomination_catalog" }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rand = "0.10.1"
socket2 = { version = "0.6.4", features = ["all"] }
ctor = "1.0.7"
