[package]
name = "crabomination_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1" }
bevy_mesh = "0.18.1"
rand = "0.10.1"
ureq = "3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
dirs = "6"
crabomination = { path = "../crabomination" }
# Generating the white name-placeholder PNGs for cards with no Scryfall art
# (see scryfall::ensure_card_images). All three are already in the tree via
# Bevy, so they add no new compilation beyond imageproc itself.
image = "0.25.10"
imageproc = "0.27"
ab_glyph = "0.2.32"

[features]
# Bevy's dynamic-linking dev accelerator — OPT-IN ONLY.
#
# It links std + a `bevy_dylib` dynamically, which speeds up the final
# link on iterative *debug* builds, but it must NOT be on for `--release`:
# it's incompatible with this workspace's `lto = "thin"` (rust-lld then
# fails with "undefined symbol" for dynamic-std statics), and a shipped
# release binary would have to carry the std/bevy dylibs alongside it.
#
# Enable it for fast local runs via `cargo dev` (alias in
# .cargo/config.toml) or `cargo run -p crabomination_client --features
# dynamic_linking`. Plain `cargo run`/`build`/`--release` stay statically
# linked.
dynamic_linking = ["bevy/dynamic_linking"]
